Bug 53532 - packagekitd crashes when installing EULA packages
Summary: packagekitd crashes when installing EULA packages
Status: RESOLVED FIXED
Alias: None
Product: PackageKit
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-15 08:32 UTC by Gary Lin
Modified: 2012-08-18 02:41 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
packagekitd backtrace (182.67 KB, text/plain)
2012-08-15 08:32 UTC, Gary Lin
Details
patch to ignore "accept-eula" in pk-transaction-run (1.03 KB, patch)
2012-08-15 08:39 UTC, Gary Lin
Details | Splinter Review

Description Gary Lin 2012-08-15 08:32:04 UTC
Created attachment 65591 [details]
packagekitd backtrace

==From the downstream bugzilla==
https://bugzilla.novell.com/show_bug.cgi?id=775651#c1

The SIGTRAP was from pk-transaction.c:pk_transaction_run(), and the function didn't handle PK_ROLE_ENUM_ACCEPT_EULA which is supposed to be run by pk_transaction_accept_eula().

It could be a race condition that pk_transaction_list_run_idle_cb() was called right after pk_transaction_accept_eula().
Comment 1 Gary Lin 2012-08-15 08:39:45 UTC
Created attachment 65592 [details] [review]
patch to ignore "accept-eula" in pk-transaction-run
Comment 2 Richard Hughes 2012-08-16 09:35:51 UTC
It looks like a bug indeed. pk_transaction_run() is used for a transaction that's been set up, and then run run against the backend. Although I'm sure your patch fixes the bug, it's a bit of a workaround; it would be better if we never called pk_transaction_run() in the first place. I'll merge your patch to git now, and I can work out a better solution with the other developers in the next few days. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.