Ignore "accept-eula" in pk-transaction-run

The "accept-eula" transaction could be proceeded by pk-transaction-run
accidentally. This commit ignores that kind of transaction to avoid
the potential crash.

https://bugs.freedesktop.org/show_bug.cgi?id=53532

Signed-off-by: Richard Hughes <richard@hughsie.com>